[package]
name = "trafficd"
version = "0.1.0"
authors = ["karin0 <karin0@gmx.com>"]
edition = "2024"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
sqlx = { version = "0.8", features = ["sqlite", "macros", "runtime-tokio"] }
prost = "0.13"
log = "0.4"
libc = "0.2"
clap = { version = "4", features = ["derive"] }
serde_json = "1"
once_cell = "1"
actix-cors = "0.7"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["rt", "macros"] }
awc = "3"
anyhow = "1"
xray-core = "0.2"
time = "0.3"
pretty_env_logger = { git = "https://github.com/karin0/pretty-env-logger.git" }

[build-dependencies]
prost-build = "0.13"

[profile.release]
strip = true
lto = true
